--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 __pycache__/*
 data/*
 data/__pycache__/*
+mls/__pycache__/*
 tests/__pycache__/*
 kyle/.ipynb_checkpoints/*
 manifold_utils/__pycache__/*
