ignoring .ipynb_checkpoints in more directories

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ mls/__pycache__/*
 tests/__pycache__/*
 kyle/.ipynb_checkpoints/*
 manifold_utils/__pycache__/*
+tests/.ipynb_checkpoints/*
+.ipynb_checkpoints/*
